--- a/homework/Qu02.html
+++ b/homework/Qu02.html
@@ -14,6 +14,7 @@
     </style>
     <script>
         document.write("<h2>Welcome home</h2>");
+        // document.write("<hr>");
         for (var i=1; i<=5; i++) {
             document.write("저희 홈페이지에 오신  것을 환영합니다."+ i +"<br>");
         }
