--- a/homework/Qu03.html
+++ b/homework/Qu03.html
@@ -28,6 +28,24 @@
             }
             document.write("<br>");
         }
+        
+        /* Teacher.ver (5-i+1) */
+        document.write("<h2>*로 역순으로 탑 만들기<br>(선생님버전)</h2>");
+        for (var i=1; i<=5; i++) {
+            for (var j=1; j<=(5-i+1); j++) {
+                document.write("* ");
+            }
+            document.write("<br>");
+        }
+        
+        document.write("<h2>*로 역순으로 탑 만들기<br>(선생님버전2)</h2>");
+        for(var i=5; i>=1; i--) {
+            for (var j=1; j<=i; j++) {
+                document.write("* ");
+            }
+            document.write("<br>");
+        }
+
     </script>
 </head>
 <body>
