--- a/J15Event04.html
+++ b/J15Event04.html
@@ -74,7 +74,7 @@
         }
     </script>
 
-    <h2>sleect에서 발생되는 change이벤트</h2>
+    <h2>select에서 발생되는 change이벤트</h2>
     <h3>당신이 좋아하는 과일은?</h3>
     <!-- 여기서 사용한 this는 select태그 자체를 JS로 전달한다. -->
     <select id="fruit" onchange="fnSelect(this);">
