--- a/homework/Qu07.html
+++ b/homework/Qu07.html
@@ -14,6 +14,15 @@
             else 
                 return num2;
         }
+        /*
+        if (parseInt(num1)> parseInt(num2)) {
+
+        }
+        else {
+
+        }
+        */
+
     </script>
     <script>
         var b = big("625", "555");
