--- a/homework/Qu08.html
+++ b/homework/Qu08.html
@@ -33,6 +33,33 @@
             ? document.write(inputNum +"=> 성공! 처음과 끝이 같음 &#127881;<br/>")
             : document.write(inputNum +"=> 실패! 처음과 끝이 다름 &#128078;<br/>");
 
+        /*T.ver*/
+        //prompt를 통해입력받으면 무조건 문자로 반환됨.
+        // var str = prompt("숫자를 입력하세요", 0);
+        
+        // var num = parseInt(str); //숫자로 변경
+        // var lastNum = num % 10; //숫자의 마지막 자리(10으로 나누면 1의 자리가 남게됨)
+        // var firstNum = 0; //숫자의 첫번째 자리(숫자는 0으로 시작할 수 없으므로 0으로 초기화)
+        
+        // //사용자가 입력한 숫자에 따라 반복횟수가 달라지므로 while문을 선택
+        // while(num>0) { //숫자가 0보다 클 때까지만 반복
+        //     //입력 받은 숫자를 firstNum에 먼저 대입 (사용자의 입력이 한자리일수도 있으므로)
+        //     firstNum = num;
+        //     /*
+        //         숫자를 10으로 나눈 후 소수점 이하를 버린다.
+        //         1234  / 10 = 123.4 => 소수점이하 버림처리 => 123
+        //         이런 방식으로 한자리씩 줄이고, 마지막에서 0.1을 버림처리해서 0이 된다.
+        //         이 때 반복문을 탈출한다.
+        //     */
+        //     num = Math/floor(num / 10);
+        // }
+
+        // if (firstNum==lastNum) {
+        //     document.write(str +"=>처음과 끝이 같음");
+        // }
+        // else {
+        //     document.write(str +"=>처음과 끝이 다름");
+        // }
     </script>
 </head>
 <body>
