--- a/homework/Qu09.html
+++ b/homework/Qu09.html
@@ -25,11 +25,37 @@
         }
         document.write("<hr>");
         document.write("가장큰수는? "+ bigNum);
-        
-
     </script>
 </head>
 <body>
-    
+    <!-- T.ver -->
+    <!-- <h2>난수10개 생성 후 최대값 구하기</h2>
+    <hr>
+    <script>
+        //배열선언
+        var plots = [];
+        //난수생성
+        for (var i=0; i<10; i++) {
+            /*
+                Math.random()은 0~1 사이의 난수를 생성
+                생성된 난수에 100 곱하면 0~99까지 나옴
+                여기에 1을 더해서 1~100 사이의 난수를 구함
+            */
+            plots[i] = Math.floor(Math.random() * 100 +1);
+        }
+        //배열출력
+        for (var i=0; i<10; i++) {
+            document.write(plots[i]+" ");
+        }
+        //최대값 찾아내기
+        var maxNum = plots[0]; //배열의 0번 인덱스를 기준값으로 설정
+        for (var i=1; i<10; i++) {
+            if (maxNum < plots[i]) {
+                //기준값보다 큰 값이 발견되면 값을 변경한다.
+                maxNum = plots[i];
+            }
+        }
+        document.write("<br>최대값: "+ maxNum);
+    </script> -->
 </body>
 </html>
