--- a/J15Event04.html
+++ b/J15Event04.html
@@ -68,7 +68,7 @@
 
                 }
                 else {
-                    obj.options[i].text = "======";
+                    // obj.options[i].text = "======";
                 }
             }
         }
